# warzone2100

./: .cirrus.yml  .gitignore  .gitmodules  .muse.toml  .sentrynative  .snapcraft.yaml  .travis.yml  CMakeLists.txt  COPYING.NONGPL  Makefile.am  README.md  appveyor.yml  arm64-osx.cmake  azure-pipelines.yml  configure.ac  configure_mac.cmake  get-dependencies.ps1  get-dependencies_linux.sh  get-dependencies_mac.sh  get-dependencies_win.ps1  vcpkg.json
.azure/: macos-build-pipeline.yml
.azure/templates/: macos-build-pipeline-template.yml
.ci/azure/templates/: macos-build-pipeline-template.yml
.ci/emscripten/toolchain/: Toolchain-Emscripten.cmake
.ci/flatpak/: Dockerfile  build.sh  collect_debug_info.sh  install_manifest_dependencies.sh  net.wz2100.wz2100.yaml.in  publish_to_flathub.sh
.ci/githubactions/: export_build_output_desc.sh
.ci/githubactions/pattern_matchers/: msvc.json
.ci/muse/: setup.sh
.ci/powershell/: request.ps1
.ci/snap/: install_vulkan_sdk.sh  snapcraft_build_get_target_arch.sh
.ci/vcpkg/overlay-ports/angle/: portfile.cmake
.ci/vcpkg/overlay-ports/basisu/: portfile.cmake  vcpkg.json
.ci/vcpkg/overlay-ports/libsodium/: portfile.cmake  vcpkg.json
.ci/vcpkg/overlay-ports/libspng/: portfile.cmake  vcpkg.json
.ci/vcpkg/overlay-ports/opus/: portfile.cmake  vcpkg.json
.ci/vcpkg/overlay-ports/sdl2/: emscripten-webgl.patch
.circleci/: config.yml
.github/workflows/: CI.yml  CI_alpine.yml  CI_archlinux.yml  CI_emscripten.yml  CI_fedora.yml  CI_flatpak.yml  CI_macOS.yml  CI_macos.yml  CI_snapcraft.yml  CI_ubuntu.yml  CI_windows.yml  draft_tag_release.yml  maintenance.yml
.github/wz/templates/: draft_release_body_template.md
build_tools/: autorevision  autorevision.cmake
build_tools/ci/circleci/: export_build_output_desc.sh
build_tools/ci/githubactions/: export_build_output_desc.sh
cmake/: EnscriptenCompressZip.cmake  FetchSentryNative.cmake  FindDetours.cmake  FindLibGcrypt.cmake  FindSPNG.cmake  FindSpng.cmake  FindZIP.cmake  IncludeFindCurl.cmake  WZVcpkgInit.cmake
data/: CMakeLists.txt
data/base/shaders/: decals.frag  nolight_instanced.vert  quad_texture2darray.frag  quad_texture2darray.vert  rect_instanced.vert  tcmask_instanced.frag  tcmask_instanced.vert  terrain.frag  terrain_combined_high.frag  terrain_combined_medium.frag  texturedrect.frag  water.frag
data/base/shaders/vk/: tcmask.frag  (+6 more)
data/mp/stats/: structure.json
doc/: CMakeLists.txt  Release.md
docker/alpine-latest/: Dockerfile
docker/archlinux-latest/: Dockerfile
docker/fedora-latest/: Dockerfile
docker/fedora-latest-m32/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu-16.04/: Dockerfile
docker/ubuntu-18.04/: Dockerfile  Dockerfile.arm64
docker/ubuntu-18.04-clang/: Dockerfile
docker/ubuntu-20.04/: Dockerfile  Dockerfile.arm64
lib/exceptionhandler/: CMakeLists.txt  Makefile.am  dumpinfo.cpp  exceptionhandler.cpp  exchndl_win.cpp
lib/framework/: crc.cpp  crc.h  debug.cpp  debug.h  demangle.hpp  frame.cpp  frame.h  i18n.cpp  lexer_input.cpp  opengl.h  resource_lexer.cpp  resource_parser.cpp  strres_lexer.cpp  wzapp.h  wzconfig.cpp  wzconfig.h  wzglobal.h  wzstring.cpp  wzstring.h
lib/gamelib/: audp_lexer.cpp
lib/ivis_opengl/: CMakeLists.txt  Makefile.am  bitimage.cpp  gfx_api.cpp  gfx_api.h  gfx_api_formats_def.h  gfx_api_gl.cpp  gfx_api_gl.h  gfx_api_image.h  gfx_api_image_basis_priv.cpp  gfx_api_image_basis_priv.h  gfx_api_image_compress_priv.cpp  gfx_api_image_compress_priv.h  gfx_api_null.cpp  gfx_api_null.h  gfx_api_vk.cpp  gfx_api_vk.h  imd.h  imdload.cpp  ivisdef.h  pieblitfunc.cpp  pieblitfunc.h  pieclip.cpp  pieclip.h  piedef.h  piedraw.cpp  piefunc.cpp  pieimage.cpp  piematrix.cpp  piemode.cpp  piestate.cpp  piestate.h  pietypes.h  png_util.cpp  png_util.h  png_util_spng.cpp  screen.cpp  screen.h  tex.cpp  tex.h  (+2 more)
lib/netplay/: CMakeLists.txt  netlog.cpp  netlog.h  netplay.cpp  netplay.h  netqueue.cpp  netsocket.cpp  nettypes.cpp  nettypes.h  port_mapping_manager.cpp  port_mapping_manager.h
lib/script/: chat_lexer.cpp  script_lexer.cpp
lib/sdl/: CMakeLists.txt  cursors_sdl.cpp  gfx_api_gl_sdl.cpp  gfx_api_gl_sdl.h  gfx_api_sdl.cpp  gfx_api_sdl.h  gfx_api_vk_sdl.h  main_sdl.cpp
lib/sequence/: Makefile.am  sequence.cpp
lib/sound/: cdaudio.cpp  cdaudio.h  oggvorbis.cpp  openal_track.cpp  playlist.cpp  playlist.h
lib/widget/: cliprect.cpp  form.cpp  form.h  jsontable.cpp  label.cpp  label.h  listwidget.cpp  listwidget.h  scrollablelist.cpp  scrollablelist.h  scrollbar.cpp  table.cpp  table.h  widgbase.h  widget.cpp  widget.h
lib/wzmaplib/plugins/: ZipIOProvider.cpp  ZipIOProvider.h
lib/wzmaplib/src/: map.cpp  map_internal.cpp  map_internal.h  map_io.cpp  map_levparse.cpp  map_package.cpp  map_script.cpp  map_script.h
macosx/BuildBot/: 00_clean.sh  01_configure.sh  02_compile.sh  02_fetchvideosequences.sh  03_compile.sh  03_upload.sh  _xcodebuild_detect.sh  _xcodebuild_helpers.sh  _xcpretty_detect.sh  make_universal.sh  travis_build.sh  travis_deploy.sh
macosx/Warzone.xcodeproj/: project.pbxproj
macosx/configs/: FetchPrebuilt.sh  FetchSource.sh  Warzone-All.xcconfig
macosx/configs/fetchscripts/: Png-FetchSource.sh  Zlib-FetchSource.sh
pkg/: CMakeLists.txt  CPackConfigVersion.cmake.in  copyright
pkg/debian/: copyright
pkg/nsis/: NSIS.template.in
po/: CMakeLists.txt  POTFILES.in  update-po.sh  warzone2100.pot
src/: CMakeLists.txt  Makefile.am  action.cpp  advvis.cpp  atmos.h  chat.cpp  cheat.cpp  clparse.cpp  combat.cpp  component.cpp  component.h  config.h.in  configuration.cpp  console.cpp  curl_emscripten_typedefs.h  display.cpp  display3d.cpp  display3d.h  displaydef.h  droid.cpp  droid.h  effects.cpp  effects.h  emscripten_helpers.cpp  emscripten_helpers.h  faction.cpp  faction.h  featuredef.h  formation.cpp  frontend.cpp  frontend.h  game.cpp  game.h  hci.cpp  ingameop.cpp  init.cpp  intdisplay.cpp  intdisplay.h  intelmap.cpp  keybind.cpp  (+69 more)
src/hci/: research.cpp
src/screens/: guidescreen.cpp
src/titleui/: campaign.cpp  multiplayer.h  passbox.cpp
tools/map/: CMakeLists.txt  maptools.cpp
(+25 files in other folders)
